# nettoe

./: AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TO-DO  autogen.sh  config.h.in  configure  configure.ac  protocol.txt
desktop/: Makefile.am  Makefile.in  nettoe.desktop.in  nettoe.menu.in  ocross.xpm  ocross_bottom.xpm  ocross_left.xpm  ocross_right.xpm  ocross_skew.xpm  ocross_top.xpm
docs/: Makefile.am  Makefile.in  nettoe.6
po/: ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in  es.po  nettoe.pot
src/: Makefile.am  Makefile.in  ai.c  board.c  board.h  game.h  matrices.c  matrices.h  misc.c  misc.h  nettoe.c  network.c  network.h  terminal.c  terminal.h
test/: Makefile.am  Makefile.in  terminfo.c
