# Makefile.am file for nettoe
# Edited by Gabriele Giorgetti <ggdev@users.sourceforge.net>
# Continued by Mats Erik Andersson <meand@users.sourceforge.net>

# This file is processed by automake

## Any directories that are built and installed should go here.
SUBDIRS = src docs test desktop

## Any directories to be a part of the distribution should be listed
## here, as well as have a Makefile generated at the end of configure.in
DIST_SUBDIRS = $(SUBDIRS)

# All the rest of the distributed files
EXTRA_DIST = \
	AUTHORS 	\
	BUGS            \
	COPYING         \
        INSTALL         \
        README		\
	TO-DO    	\
	autogen.sh	\
	ChangeLog	\
	protocol.txt
